<resources>

    //welcome string and App name String messages
    <string name="app_name"> goComplain</string>
    <string name="welcome_message">  Welcome To goComplain</string>
    <string name="fifthScreenText">THERE ARE NO FEEDBACK YET</string>

    //Buttons
    <string name="homeButton"> SIGN IN </string>
    <string name="secondScreenButton"> OK </string>

    <string name="thirdScreenButton1"> POST A COMPLAINT</string>
    <string name="thirdScreenButton2"> CHECK FEEDBACK </string>
    <string name="thirdScreenButton3"> VIEW POSTS </string>

    <string name="fourthScreenButton1"> POST </string>
    <string name="fourthScreenButton2"> UPLOAD A PICTURE</string>







    //logo
    <string name="homeScreenLogo"> LOGO </string>
    <string name="secondScreenLogo"> LOGO </string>

    //Inputs
    <string name="secondScreenUsername"> Username </string>
    <string name="secondScreenPassword"> Password </string>


</resources>
